<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_date"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/date"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_type"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_type_breakfast"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_type_lunch"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_type_dinner"/>

        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_content"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableView">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/label_content_type"
                android:layout_weight="7"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/label_content_cal"
                android:layout_weight="4"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="text"
                android:layout_weight="7"/>

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="number"
                android:layout_weight="4"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="text"
                android:layout_weight="7"/>

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="number"
                android:layout_weight="4"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="text"
                android:layout_weight="7"/>

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="number"
                android:layout_weight="4"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="text"
                android:layout_weight="7"/>

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="number"
                android:layout_weight="4"/>
        </TableRow>
    </TableLayout>

</LinearLayout>